--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <h1>Counter App</h1>
         <h2 id="count">0</h2>
 
+        <input type="number" id="step" value="1" min="1">
+<p>Step Value</p>
+ 
         <button onclick="increase()">Increase</button>
         <button onclick="decrease()">Decrease</button>
         <button onclick="reset()">Reset</button>
