Disabled decrease button when counter reaches zero

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>Step Value</p>
  
         <button onclick="increase()">Increase</button>
-        <button onclick="decrease()">Decrease</button>
+        <button id="decreaseBtn" onclick="decrease()">Decrease</button>
         <button onclick="reset()">Reset</button>
     </div>
 
